Bug 249119 - Find Transation - Payee - "Select None" actually selects All
Summary: Find Transation - Payee - "Select None" actually selects All
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 249428 257827 265969 269013 277591 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-26 14:25 UTC by Brian
Modified: 2011-08-05 02:58 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2010-08-26 14:25:44 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

When using the Transaction Search dialog, on the Payee tab, the button "Select None" actually performs a Select All.

Note--I have not tested the other Transaction Search tabs to see if similar problems are present.

Reproducible: Always

Steps to Reproduce:
See details.

Actual Results:  
See details.

Expected Results:  
All Payees should be unchecked but instead become checked.
Comment 1 Thomas Baumgart 2010-08-27 08:14:49 UTC
SVN commit 1168587 by tbaumgart:

Can someone backport this to the stable branch please?

BUG: 249119

 M  +1 -1      kfindtransactiondlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1168587
Comment 2 Alvaro Soliverez 2010-08-27 11:48:28 UTC
SVN commit 1168738 by asoliverez:

Backported to stable branch

BUG: 249119

 M  +1 -1      kfindtransactiondlg.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1168738
Comment 3 Thomas Baumgart 2010-08-29 18:10:37 UTC
*** Bug 249428 has been marked as a duplicate of this bug. ***
Comment 4 Cristian Oneț 2010-11-24 22:23:45 UTC
*** Bug 257827 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Baumgart 2011-02-10 10:31:45 UTC
*** Bug 265969 has been marked as a duplicate of this bug. ***
Comment 6 Alvaro Soliverez 2011-03-21 02:58:25 UTC
*** Bug 269013 has been marked as a duplicate of this bug. ***
Comment 7 Cristian Oneț 2011-07-12 06:40:06 UTC
*** Bug 277591 has been marked as a duplicate of this bug. ***