Backported to stable branch

BUG: 249119

svn path=/branches/kmymoney/4.5/; revision=1168738